# embedded_array_code

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md
src/calibration/: CMakeLists.txt  Calib_Algo.md  README.md  TASK.md  TODO.md  data  package.xml  setup.py
src/calibration/config/: calibration_params.yaml  diana7_home.yaml  signal_params_calib.yaml  signal_params_calib_ramp.yaml
src/calibration/data/: b_ref_calibrated.csv  channel_background_field_R_corrected.csv  channel_background_field_calibrated.csv  consistency_calib.csv  ellipsoid_calibrated_handheld_data.csv  handheld_calib.csv  residual_b_calibrated.csv  residual_b_corr.csv  residual_stats.csv  residual_stats_normalized.csv  residual_std_normalized.csv  residual_std_table.csv  rotated_ellip_calibrated_consistency_data.csv  sensor_R_matrices.csv
src/calibration/docs/: experiment_order.txt
src/calibration/launch/: calibration_sweep.launch  calibration_sweep_ramp_trigger.launch  coefficient_calibration.launch  consistency_calibration.launch  ellipsoid_calibration.launch  handheld_calibration.launch  save_diana7_home.launch
src/calibration/lib/: __init__.py  __main__.py  center_field_estimator.py  consistency_fit.py
src/calibration/plots/: mean_std_comparison.csv  mean_std_comparison_AB.csv  mean_std_method_a.csv  mean_std_method_b.csv  mean_std_table.csv
src/calibration/scripts/: apply_ellipsoid_and_rccorr.py  calibration_affine_model.py  calibration_fit.py  calibration_fit_normalized.py  calibration_joint_sweep.py  calibration_postprocessor.py  calibration_sweep_ramp_trigger.py  coefficient_calibration.py  compare_polarity_consistency.py  consistency_calibration.py  ellipsoid_calibration_sampler.py  export_residual_long_csv.py  handheld_calibration_sampler.py  plot_boxplot_voltage.py  plot_residual_comparison.py  plot_residual_comparison_normalized.py  plot_rowwise_x_std.py  plot_stem_combined.py  process_consistency_calib.py  remove_outliers.py  remove_outliers_diff.py  save_diana7_home.py  test_center_field_estimator.py
src/gels_localization/: CMakeLists.txt  package.xml
src/gels_localization/docs/: README_maps_estimator.md
src/gels_localization/launch/: localization_service.launch
src/gels_localization/scripts/: estimate_dipole_moment.py  extract_permanent_magnet_data.py  extract_source_frame_data.py  kabsch_solver.py  localization_service_node.py  mag_dipole_model.py  maps_estimator.py  noise_analysis_rp.py  offline_mock.py  offline_plot.py  offline_process_cycle.py  offline_utils.py  plot_noise_analysis.py  sensor_calibration.py  test_localization_service.py
src/sensor_array_config/: CMakeLists.txt  base.py  package.xml  setup.py
src/sensor_array_config/config/: README.md
src/sensor_array_config/sensor_array_config/: __init__.py  base.py  qmc6309.py
src/sensor_data_collection/: CMakeLists.txt  README.md  README_calibration.md  package.xml
src/sensor_data_collection/config/: params_cci.yaml  params_cvt.yaml  sensor_calibration.yaml  signal_params_cci.yaml  signal_params_cvt.yaml  signal_params_manual.yaml  task_params.yaml
src/sensor_data_collection/data/: calibration_results.json  calibration_results_aggressive.json  calibration_results_no_scale.json  ellipsoid_calibrated_handheld_data.csv  magnitude.txt  manual_record_20260519_204425.csv  manual_record_20260519_204713.csv  manual_record_20260519_204924.csv  manual_record_20260519_205125.csv  manual_record_20260519_205205.csv  manual_record_20260519_205247.csv  manual_record_20260519_205328.csv  manual_record_20260519_205407.csv  manual_record_20260519_205441.csv  manual_record_bg.csv
src/sensor_data_collection/docs/: calibration.md  communication_test.md  protocol.txt
src/sensor_data_collection/launch/: data_collection.launch  stm32_manual.launch  test_stm32.launch
src/sensor_data_collection/msg/: SlotData.msg
src/sensor_data_collection/plot/: plot_cycle_pose.py  plot_ground_truth_error_scatter.py
src/sensor_data_collection/result_1/: cycle_0000.json  cycle_0001.json
src/sensor_data_collection/result_2/: README.md  config_error_stats.csv  cycle_0000.json  cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  readme.md  three_sensor_combo_per_cycle.csv  three_sensor_combo_summary.csv
src/sensor_data_collection/result_3/: cycle_0000.json  cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  readme.md
src/sensor_data_collection/result_4/: cycle_0000.json  cycle_0001.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  readmd.md
src/sensor_data_collection/result_5/: cycle_0000.json  cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  readmd.md
src/sensor_data_collection/result_6/: cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  readmd.md
src/sensor_data_collection/result_6_old_config/: cycle_0000.json  cycle_0001.json
src/sensor_data_collection/result_7/: cycle_0000.json  cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  readmd.md
src/sensor_data_collection/result_em/: source_frame_data.txt
src/sensor_data_collection/result_merged/: cycle_0000.json  cycle_0002.json  cycle_0004.json  cycle_0005.json  cycle_0007.json  cycle_0008.json  cycle_0011.json
src/sensor_data_collection/result_merged_all/: configuration_error_stats.csv  cycle_0000.json  cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  (+54 more)
src/triple_arm_task/: CMakeLists.txt  package.xml
(+188 files in other folders)
