<?xml version="1.0"?>
<package format="2">
  <name>calibration</name>
  <version>0.0.0</version>
  <description>The calibration package for sensor array system</description>

  <maintainer email="zhang@todo.todo">zhang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_data_collection</depend>

  <export>
  </export>
</package>
