<?xml version="1.0"?>
<package format="2">
  <name>sensor_array_config</name>
  <version>0.0.0</version>
  <description>Sensor array configuration package for QMC6309 and other sensors</description>

  <maintainer email="zhang@todo.todo">zhang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
